--- a/libs/ui-utils/project.json
+++ b/libs/ui-utils/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/ui-utils/src",
   "projectType": "library",
+  "tags": [],
   "targets": {
     "build": {
       "executor": "@nx/vite:build",
@@ -36,6 +37,5 @@
         }
       }
     }
-  },
-  "tags": []
+  }
 }
