--- a/libs/abis/project.json
+++ b/libs/abis/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/abis/src",
   "projectType": "library",
+  "tags": [],
   "targets": {
     "abis": {
       "executor": "nx:noop",
@@ -44,6 +45,5 @@
         "lintFilePatterns": ["libs/abis/**/*.ts"]
       }
     }
-  },
-  "tags": []
+  }
 }
