--- a/libs/widget-lib/project.json
+++ b/libs/widget-lib/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/widget-lib/src",
   "projectType": "library",
+  "tags": [],
   "targets": {
     "build": {
       "executor": "@nx/vite:build",
@@ -45,6 +46,5 @@
         }
       }
     }
-  },
-  "tags": []
+  }
 }
